# ppng

./: .gitignore  LICENSE  README.md  pyproject.toml
ppng/: __init__.py  ppng.py  ppngreader.py  ppngwriter.py
tests/: test_basic.py  test_chunk_compression.py  test_meta.py  test_png_suite.py
tests/png_test_suite/: README.md
